--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,10 @@ a {
   text-decoration: none;
 }
 
+button {
+  -webkit-tap-highlight-color: transparent;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -295,6 +299,9 @@ main {
 
 .logo {
   font-size: 3rem;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .category_selector {
