--- a/src/index.scss
+++ b/src/index.scss
@@ -325,7 +325,7 @@ main {
   border-radius: 1rem;
   text-align: center;
   background: radial-gradient(#636b64, #263A29);
-  box-shadow: 0 0 1rem inset black;
+  box-shadow: 0 0 4rem inset var(--black);
   transition: box-shadow 0.5s;
   cursor: pointer;
   outline: none;
@@ -335,9 +335,11 @@ main {
     transition: transform 0.2s;
     max-width: 100%;
   }
+
   h2 {
     padding: 0.5rem 1rem;
   }
+
   &:hover,
   &:focus {
     box-shadow: 0 0 1rem inset white;
@@ -356,19 +358,27 @@ main {
 .category_selector {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  padding: 3rem;
+  padding: 2rem;
   margin: 2rem;
   background-color: var(--light-green);
   gap: 3rem;
   border-radius: 1rem;
 
-  .display-flex {
-    gap: 0.5rem;
+  label {
+    grid-column: 1 / 4;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+    input[type="text"] {
+      padding: 0.25rem 0.5rem;
+      outline-color: var(--orange);
+      width: 20rem;
+    }
   }
 
   select {
     padding: 0.25rem 0.5rem;
-    flex: 1 1 auto;
     cursor: pointer;
   }
 }
@@ -486,23 +496,17 @@ main {
       max-width: 100%;
     }
   }
-  #search_page {
-    .category_selector {
-      padding: 1rem 2rem;
-    }
-    .display-flex {
-      flex-direction: column;
-    }
-  }
 }
 
 @media (max-width: 1000px) {
   #categories_page .card_list_container {
     grid-template-columns: repeat(3, 1fr);
   }
+
   #product_page {
     .top_section {
       flex-direction: column;
+
       .grid_container {
         min-width: 30rem;
       }
@@ -562,12 +566,14 @@ main {
       height: 20rem;
     }
   }
+
   #home {
     .card_list_container {
       height: 45rem;
 
     }
   }
+
   .card_list_container {
     grid-template-columns: repeat(auto-fill, 20rem);
     gap: 2rem;
@@ -583,25 +589,34 @@ main {
   .hero_text {
     font-size: 2rem;
   }
+
   #search_page {
     .category_selector {
-      grid-template-columns: 1fr 1fr;
-      .display-flex:last-child {
-        grid-column: 1 / 3;
+      label {
+        white-space: nowrap;
+        input[type="text"] {
+          flex: 1 1 auto;
+        }
       }
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
     }
   }
+
   .category_card {
     h2 {
       font-size: 1rem;
     }
   }
+
   #product_page {
     .details_section {
       padding-inline: 2rem;
       flex-direction: column;
       gap: 1rem;
     }
+
     .food_instruction {
       padding-inline: 0;
       margin: 0;
@@ -626,6 +641,13 @@ main {
 @media (max-width: 450px) {
   #search_page {
     .category_selector {
+      label {
+        flex-direction: column;
+        align-items: start;
+        input {
+          width: 100%;
+        }
+      }
       display: flex;
       flex-direction: column;
     }
