--- a/src/index.scss
+++ b/src/index.scss
@@ -31,6 +31,13 @@ select {
   font-weight: 400;
 }
 
+
+button,
+textarea,
+select {
+  cursor: pointer;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -103,6 +110,7 @@ nav {
   display: grid;
   grid-template-columns: repeat(auto-fill, 50rem);
 
+  padding-inline: 1rem;
   gap: 2rem;
   justify-content: space-evenly;
   justify-items: center;
@@ -264,7 +272,6 @@ nav {
     gap: 3rem;
 
     button {
-      cursor: pointer;
       transition: color 0.2s, background-color 0.2s;
       font-size: 1.5rem;
       width: 3rem;
@@ -299,7 +306,6 @@ main {
     border: none;
     padding: 0.25rem 0.5rem;
     font-size: 1.25rem;
-    cursor: pointer;
     transition: background-color 0.5s;
 
     &:hover {
@@ -356,30 +362,41 @@ main {
 }
 
 .category_selector {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  padding: 2rem;
-  margin: 2rem;
-  background-color: var(--light-green);
-  gap: 3rem;
-  border-radius: 1rem;
 
+  margin: 2rem auto;
+  
+  width: min(35rem, 95%);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 2rem;
+  background-color: var(--light-green);
+  border-radius: 1rem;
   label {
-    grid-column: 1 / 4;
     display: flex;
     gap: 1rem;
     align-items: center;
     justify-content: center;
+    white-space: nowrap;
     input[type="text"] {
       padding: 0.25rem 0.5rem;
       outline-color: var(--orange);
-      width: 20rem;
+      width: 100%;
     }
   }
 
   select {
     padding: 0.25rem 0.5rem;
-    cursor: pointer;
+  }
+  button {
+    border: none;
+    padding: 0.5rem;
+    background-color: var(--green);
+    color: var(--white);
+    border-radius: 0.5rem;
+    &:active {
+      box-shadow: 0 0 1rem var(--black) inset;
+    }
   }
 }
 
@@ -473,7 +490,6 @@ main {
   border: none;
   background-color: transparent;
   color: var(--cream);
-  cursor: pointer;
 }
 
 .text-center {
@@ -546,7 +562,6 @@ main {
     padding: 0.5rem;
     background-color: transparent;
     border: none;
-    cursor: pointer;
     transition: color 0.5s;
     z-index: 10;
     color: var(--white);
@@ -593,7 +608,6 @@ main {
   #search_page {
     .category_selector {
       label {
-        white-space: nowrap;
         input[type="text"] {
           flex: 1 1 auto;
         }
