--- a/src/index.css
+++ b/src/index.css
@@ -177,6 +177,7 @@ nav #favourite_counter {
   flex-direction: column;
   overflow: auto;
   position: relative;
+  padding-bottom: 1rem;
 }
 .preview_card .food_info ul li {
   display: flex;
@@ -458,7 +459,7 @@ main {
   .navigation {
     z-index: 9;
     display: flex;
-    justify-content: center;
+    padding-top: 5rem;
     flex-direction: column;
     position: fixed;
     right: 0;
@@ -469,13 +470,14 @@ main {
     transform: translate(100%);
     transition: transform 0.5s;
     background-color: rgba(0, 0, 0, 0.4);
+    font-size: 1.5rem;
   }
   .navigation a {
     width: 20rem;
   }
   .navigation a #favourite_counter {
     top: 50%;
-    left: 12rem;
+    left: 14rem;
     transform: translate(-50%, -50%);
   }
   #menu_button {
