--- a/src/index.scss
+++ b/src/index.scss
@@ -197,7 +197,7 @@ nav {
       flex-direction: column;
       overflow: auto;
       position: relative;
-
+      padding-bottom: 1rem;
       li {
         display: flex;
         justify-content: space-between;
@@ -534,7 +534,7 @@ main {
   .navigation {
     z-index: 9;
     display: flex;
-    justify-content: center;
+    padding-top: 5rem;
     flex-direction: column;
     position: fixed;
     right: 0;
@@ -544,13 +544,13 @@ main {
     transform: translate(100%);
     transition: transform 0.5s;
     background-color: rgba(0, 0, 0, 0.4);
-
+    font-size: 1.5rem;
     a {
       width: 20rem;
 
       #favourite_counter {
         top: 50%;
-        left: 12rem;
+        left: 14rem;
         transform: translate(-50%, -50%);
       }
     }
