added responsivness to preview page

--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,7 @@ nav #favourite_counter {
   overflow: hidden;
   box-shadow: 0 0 1rem var(--black);
   transition: left 0.5s, transform 0.5s, filter 0.5s, background-color 0.5s, box-shadow 0.5s;
+  animation: showUp 0.2s forwards;
 }
 .preview_card:hover, .preview_card:focus-within {
   box-shadow: 0 0 0.5rem 0.01rem var(--white);
@@ -543,6 +544,20 @@ main {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+@media (max-width: 550px) {
+  #product_page .top_section {
+    padding-inline: 0;
+  }
+  #product_page .top_section img {
+    width: 100%;
+    height: auto;
+  }
+  #product_page .grid_container {
+    border: none;
+    width: 100%;
+    min-width: auto !important;
+  }
+}
 @media (max-width: 500px) {
   html {
     font-size: 14px;
@@ -564,5 +579,17 @@ main {
 @media (max-width: 400px) {
   html {
     font-size: 12px;
+  }
+}
+.preview_card, .category_card, .category_selector, .hero_text {
+  animation: showUp 0.5s forwards;
+}
+
+@keyframes showUp {
+  from {
+    filter: opacity(0);
+  }
+  to {
+    filter: opacity(1);
   }
 }/*# sourceMappingURL=index.css.map */
