--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,13 @@
   --white: white;
   --red: #FF2400;
   --black: rgb(56, 52, 52);
+  --root-background: linear-gradient(to right bottom, #2a392e, #243d2a, #1d4124, #15451e, #0a4816);
+  --transparent-black: rgba(0, 0, 0, 0.4);
+  --nav-background: transparent;
   color-scheme: light dark;
-  color: var(--white);
-  background-image: linear-gradient(rgb(39, 39, 39), rgb(59, 70, 62));
+  color: var(--cream);
+  background-image: var(--root-background);
+  transition: color 0.3s;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -54,8 +58,10 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding-inline: 3rem;
-  background-color: var(--green);
+  border-bottom: 1px solid var(--orange);
   color: var(--cream);
+  background-color: var(--nav-background);
+  box-shadow: 0 0 1rem var(--black);
 }
 nav a {
   display: inline-block;
@@ -65,7 +71,7 @@ nav a {
   outline: none;
 }
 nav a:hover,
-nav a:focus {
+nav a:active {
   letter-spacing: 0.1rem;
   background-color: var(--orange);
 }
@@ -80,6 +86,13 @@ nav #favourite_counter {
   border-radius: 50%;
   top: 0.25rem;
   right: 0;
+}
+nav .light_toggle {
+  padding: 0.5rem;
+  background-color: transparent;
+  border: none;
+  font-size: 2rem;
+  color: var(--cream);
 }
 
 #menu_button {
@@ -260,15 +273,18 @@ main {
   padding-bottom: 2rem;
 }
 
-.delete_btn_container button {
+.btn_container button {
   float: right;
   border: none;
   padding: 0.25rem 0.5rem;
   font-size: 1.25rem;
   transition: background-color 0.5s;
 }
-.delete_btn_container button:hover {
+.btn_container.delete button:hover {
   background-color: var(--red);
+}
+.btn_container.love button:hover {
+  background-color: var(--very-green);
 }
 
 #favourites .card_list_container {
@@ -311,7 +327,7 @@ main {
   border: none;
   padding: 0.5rem;
   background-color: var(--green);
-  color: var(--white);
+  color: var(--cream);
   border-radius: 0.5rem;
 }
 .category_selector button:active {
@@ -323,14 +339,14 @@ main {
   padding: 1rem 2rem;
   border-radius: 1rem;
   margin-inline: 2rem;
+  transition: opacity 0.3s;
+  border: 1px solid var(--orange);
 }
 
-#product_page .food_name {
-  text-align: center;
+#product_page .hero_text {
   margin-block: 1rem;
   padding-block: 1rem;
   font-size: 3rem;
-  background-color: var(--orange);
 }
 #product_page .top_section {
   display: flex;
@@ -421,7 +437,7 @@ main {
   .navigation {
     z-index: 9;
     display: flex;
-    padding-top: 5rem;
+    padding-top: 10rem;
     flex-direction: column;
     position: fixed;
     right: 0;
@@ -431,7 +447,7 @@ main {
             backdrop-filter: blur(1rem);
     transform: translate(100%);
     transition: transform 0.5s;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: var(--transparent-black);
     font-size: 1.5rem;
   }
   .navigation a {
@@ -450,7 +466,7 @@ main {
     border: none;
     transition: color 0.5s;
     z-index: 10;
-    color: var(--white);
+    color: var(--cream);
   }
   #menu_button:hover {
     color: var(--orange);
