--- a/src/index.scss
+++ b/src/index.scss
@@ -9,10 +9,14 @@
   --white: white;
   --red: #FF2400;
   --black: rgb(56, 52, 52);
+  --root-background: linear-gradient(to right bottom, #2a392e, #243d2a, #1d4124, #15451e, #0a4816);
+  --transparent-black: rgba(0, 0, 0, 0.4);
+  --nav-background: transparent;
 
   color-scheme: light dark;
-  color: var(--white);
-  background-image: linear-gradient(rgb(39, 39, 39), rgb(59, 70, 62));
+  color: var(--cream);
+  background-image: var(--root-background);
+  transition: color 0.3s;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -58,8 +62,10 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding-inline: 3rem;
-  background-color: var(--green);
+  border-bottom: 1px solid var(--orange);
   color: var(--cream);
+  background-color: var(--nav-background);
+  box-shadow: 0 0 1rem var(--black);
 
   a {
     display: inline-block;
@@ -70,10 +76,9 @@ nav {
   }
 
   a:hover,
-  a:focus {
+  a:active {
     letter-spacing: 0.1rem;
     background-color: var(--orange);
-
   }
 
   #favourite_counter {
@@ -87,6 +92,13 @@ nav {
     border-radius: 50%;
     top: 0.25rem;
     right: 0;
+  }
+  .light_toggle {
+    padding: 0.5rem;
+    background-color: transparent;
+    border: none;
+    font-size: 2rem;
+    color: var(--cream);
   }
 }
 
@@ -300,16 +312,22 @@ main {
   padding-bottom: 2rem;
 }
 
-.delete_btn_container {
+.btn_container {
   button {
     float: right;
     border: none;
     padding: 0.25rem 0.5rem;
     font-size: 1.25rem;
     transition: background-color 0.5s;
-
-    &:hover {
+  }
+  &.delete {
+    button:hover {
       background-color: var(--red);
+    }
+  }
+  &.love {
+    button:hover {
+      background-color: var(--very-green);
     }
   }
 }
@@ -356,7 +374,7 @@ main {
     border: none;
     padding: 0.5rem;
     background-color: var(--green);
-    color: var(--white);
+    color: var(--cream);
     border-radius: 0.5rem;
     &:active {
       box-shadow: 0 0 1rem var(--black) inset;
@@ -369,15 +387,15 @@ main {
   padding: 1rem 2rem;
   border-radius: 1rem;
   margin-inline: 2rem;
+  transition: opacity 0.3s;
+  border: 1px solid var(--orange);
 }
 
 #product_page {
-  .food_name {
-    text-align: center;
+  .hero_text {
     margin-block: 1rem;
     padding-block: 1rem;
     font-size: 3rem;
-    background-color: var(--orange);
   }
 
   .top_section {
@@ -486,7 +504,7 @@ main {
   .navigation {
     z-index: 9;
     display: flex;
-    padding-top: 5rem;
+    padding-top: 10rem;
     flex-direction: column;
     position: fixed;
     right: 0;
@@ -495,7 +513,7 @@ main {
     backdrop-filter: blur(1rem);
     transform: translate(100%);
     transition: transform 0.5s;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: var(--transparent-black);
     font-size: 1.5rem;
     a {
       width: 20rem;
@@ -516,7 +534,7 @@ main {
     border: none;
     transition: color 0.5s;
     z-index: 10;
-    color: var(--white);
+    color: var(--cream);
 
     &:hover {
       color: var(--orange)
