--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@
   --black: rgb(56, 52, 52);
   --root-background: linear-gradient(to right bottom, #2a392e, #243d2a, #1d4124, #15451e, #0a4816);
   --transparent-black: rgba(0, 0, 0, 0.4);
-  --nav-background: transparent;
+  --nav-background: var(--transparent-black);
 
   color-scheme: light dark;
   color: var(--cream);
@@ -96,7 +96,7 @@ nav {
     right: 0;
   }
   .light_toggle {
-    padding: 0.5rem;
+    padding: 0.5rem 1.25rem;
     background-color: transparent;
     border: none;
     font-size: 2rem;
@@ -540,7 +540,6 @@ main {
     transition: color 0.5s;
     z-index: 10;
     color: var(--cream);
-
     &:hover {
       color: var(--orange)
     }
